@@ -1,5 +1,6 @@
 package DBLib.Postgres;
 
+import java.nio.file.Path;
 import java.util.logging.Logger;
 import java.io.IOException;
 //file
@@ -17,15 +18,17 @@ public class ManagementConnectionPostgre {
     private String password;
     private String user;
     private String port;
+    private String database;
 
     private static final Logger logger = Logger.getLogger(ManagementConnectionPostgre.class.getName());
 
 
-    public ManagementConnectionPostgre(String host, String user, String password, String port) {
+    public ManagementConnectionPostgre(String host, String user, String password, String port, String database) {
         this.host = host;
         this.user = user;
         this.password = password;
         this.port = port;
+        this.database = database;
     }
 
     public ManagementConnectionPostgre() {
@@ -35,13 +38,14 @@ public class ManagementConnectionPostgre {
     private void readDataBaseAccessFile() {
 
         try {
-            String content = new String(Files.readAllBytes(Paths.get("credentialsPostgre.json")));
+            String content = new String(Files.readAllBytes(Path.of("src/main/resources/credentialsPostgre.json")));
             JSONObject json = new JSONObject(content);
 
             this.host = json.getString("host");
             this.user = json.getString("user");
             this.password = json.getString("password");
             this.port = json.getString("port");
+            this.database = json.getString("database");
 
         } catch (IOException e) {
             logger.severe("Error reading database access file: " + e.getMessage());
@@ -52,7 +56,10 @@ public class ManagementConnectionPostgre {
     public void createConnection() {
         try {
             Class.forName("org.postgresql.Driver");
-            this.connection = DriverManager.getConnection("jdbc:postgresql://" + this.host + ":" + this.port + "/" + this.user, this.password, this.port);
+
+            String url = "jdbc:postgresql://" + host + ":" + port + "/" + database;
+            this.connection = DriverManager.getConnection(url, user, password);
+
             logger.info("Connessione aperta con successo");
         } catch (ClassNotFoundException e) {
             logger.severe("DB driver not found: " + e.getMessage());
